# wanglegpb

./: CMakeLists.txt  README  clean_cmake.sh  clientbootstrap.patch  example.patch
cmake/: FindProtobuf.cmake  FindWangle.cmake
protocols/: test.proto
rpc/: ClientSerializeHandler.h  RpcClient.cpp  RpcServer.cpp  ServerSerializeHandler.h
